--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,24 @@ einops
 fairseq
 flask
 flask_cors
+FreeSimpleGUI
 gin
 gin_config
+gradio
+jupyterlab
 librosa
 local_attention
 matplotlib
 numpy
 praat-parselmouth
+protobuf==3.19.1
+pysimplegui
 pyworld
 PyYAML
 resampy
 scikit_learn
 scipy
+sounddevice
 SoundFile
 tensorboard
 torchcrepe
@@ -21,6 +27,3 @@ torchfcpe
 tqdm
 transformers
 wave
-FreeSimpleGUI
-sounddevice
-gradio
